# zabbixctl

./: AUTHORS  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/: zabbixctl.cfg
templates/: zbx_export_templates.xml
zabbixctl/: zabbixctl.py
zabbixctl/utils/: config.py  host.py  hostgroup.py  screen.py  template.py
