[metadata]
name = zabbixctl
description-file =
    README.rst
author = A. Nevenchannyy
author-email = anevenchannyy@mirantis.com
version=0.1
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    zabbixctl

data_files =
    /etc = etc/zabbixctl.cfg

[entry_points]
console_scripts =
    zabbixctl = zabbixctl.zabbixctl:main
